--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "goit-js-project-filmoteka",
     "version": "2.0.0",
     "description": "",
-    "homepage": "https://kate-zahorui.github.io/goit-js-project-filmoteka",
+    "homepage": "https://Maxwelllife.github.io/Filmoteka_project",
     "scripts": {
         "start": "parcel src/*.html",
-        "build": "parcel build src/*.html --public-url /goit-js-project-filmoteka/"
+        "build": "parcel build src/*.html --public-url /Filmoteka_project/"
     },
     "repository": {
         "type": "git",
